--- a/source/partials/snippets/_form-hubspot.erb
+++ b/source/partials/snippets/_form-hubspot.erb
@@ -8,7 +8,6 @@
     portalId: '1695915',
     formId: '<%= form_id %>',
     cssClass: '',
-    submitButtonClass: 'button button--primary expanded',
-    errorMessageClass: 'ctz-form-error'
+    submitButtonClass: 'button button--primary expanded'
   });
 </script>
