--- a/source/academy/index.html.erb
+++ b/source/academy/index.html.erb
@@ -3,13 +3,16 @@ title: "Learn about HIPAA, HITRUST, HL7, FHIR, and more at the Datica Academy"
 summary: "The industry's leading resource for understanding complex healthcare topics"
 author: "Datica, Inc."
 tags: "training, education, HIPAA, HL7, FHIR, interoperability, EHR, integration, resource"
-date: "January 1, 2017"
 ogType: "article"
 share_image: "https://images.ctfassets.net/189dvqdsjh46/n9pqHc4Xp62uUSwciEe4C/ead1ba4e14e45c06639c5dea3d47b8ac/datica-academy-notebook-share.jpg?w=1200"
 layout: "basic"
 customCSS: "academy"
 customJS: "/public/js/academy.js"
 ---
+<% 
+today = DateTime.now
+current_page.data.date = today.strftime('%B %-d, %Y')
+%>
 <%= partial "partials/snippets/header", :locals => { :style => "dark" } %>
 <section class="section-article">
     <div class="row align-center">
