--- a/source/contentful_templates/guide.html.slim
+++ b/source/contentful_templates/guide.html.slim
@@ -23,7 +23,8 @@ ruby:
     if p.has_key?("pub_date")
         current_page.data.date = p['pub_date'].strftime('%B %-d, %Y')
     else
-        current_page.data.date = "January 1, 2017"
+        today = DateTime.now
+        current_page.data.date = today.strftime('%B %-d, %Y')
     end
     if p.has_key?("image_thumb")
         row_align = "align-center"
@@ -35,9 +36,9 @@ ruby:
 
 section.container-gray-2#top
     .container-color--tint-20.faded-max.group
-        = partial "partials/snippets/header", :locals => { :style => "light" }
-    .row.align-middle(class=row_align)
-        .columns.small-12.medium-8.large-6.group.medium-order-2(class=col_offset)
+        = partial "partials/head/header", :locals => { :style => "light" }
+    .row.align-middle
+        .columns.small-12.medium-8.xlarge-6.group.medium-order-2
             = partial "partials/snippets/button", :locals => { :label => "Get your free guide", :url => "#guide-form", :button_classes => "button success hide-for-medium-large", :icon => "icon-download", :icon_color => "black" }
             .headline-5.subhead--spaced.faded.show-for-large Datica Guides
             h1.headline-3.text-strong
@@ -49,11 +50,11 @@ section.container-gray-2#top
                 / .content-dynamic
                 = Kramdown::Document.new(p["desc"]).to_html
         - if p.has_key?("image_thumb")
-            .columns.small-12.medium-4.large-4.text-center.medium-order-1
+            .columns.small-12.medium-4.xlarge-4.text-center.medium-order-1
                 img.text-center.product-thumb(data-interchange="[#{p.image_thumb.url}?w=400, small], [#{p.image_thumb.url}?w=500, medium]" alt="Datica Guide: #{p.title}")
 section.section-article--med.container-gray-11
-    .row.align-center
-        .columns.small-12.medium-large-6.large-6.group--2x
+    .row
+        .columns.small-12.medium-large-6.xlarge-6.group--2x
             - if p.has_key?("guide_text")
                 article.group
                     = Kramdown::Document.new(p["guide_text"]).to_html
@@ -63,7 +64,7 @@ section.section-article--med.container-gray-11
                     - p["authors"].each do | author |
                         p
                             = partial("partials/snippets/person", :locals => { :p => author })
-        #guide-form.columns.small-12.medium-large-6.large-4
+        #guide-form.columns.small-12.medium-large-6.xlarge-4
             .callout.drop.form-embed
                 - if p.has_key?("related_form")
                     = stylesheet_link_tag "views/forms-inline.css"
