--- a/source/assets/scss/modules/forms.scss
+++ b/source/assets/scss/modules/forms.scss
@@ -179,3 +179,16 @@ select{border: rem-calc(1px) solid $color_border;}
 div.st-ui-autocomplete div.st-query-present a.st-ui-result, section.st-ui-slide-autocomplete div.st-query-present a.st-ui-result {
     padding-left: rem-calc(15) !important;
 }
+// hubspot
+.hs-button {
+    background-color: $success_color;
+    color: white;
+    font-weight: bold;
+    padding: 11px 18px;
+    width: 100%;
+}
+.hs-error-msgs li label {
+    font-style: italic;
+    color: darken($alert_color, 5%);
+    margin-bottom: 1.2rem;
+}
