Re-pointed all the header partial calls to the one in /head. Was done earlier but missed somehow.

--- a/source/404.html.erb
+++ b/source/404.html.erb
@@ -10,7 +10,7 @@ customCSS: "discover"
 bgImage: "//images.ctfassets.net/189dvqdsjh46/4YMziFy6JGi6iKwsskImEG/1074c45f366e78ed5666841f9b1ba3dd/walking_on_Sand_Dunes__color__dark__andrew-deslauriers-269459.jpg"
 ---
 <div class="container-color--dark-alt">
-    <%= partial "partials/snippets/header", :locals => { :style => "light" } %>
+    <%= partial "partials/head/header", :locals => { :style => "light" } %>
 </div>
 
 <section class="section-article container-gray-3 container-image--center" data-interchange="[<%= current_page.data.bgImage %>?fit=thumb&w=1200&h=800&f=left&q=70, medium], [<%= current_page.data.bgImage %>?fit=thumb&w=1600&h=1200&f=left&q=80, large], [<%= current_page.data.bgImage %>?fit=thumb&w=2200&h=1600&f=top_left&q=60, xlarge]">
