--- a/source/catalyze.html.erb
+++ b/source/catalyze.html.erb
@@ -9,7 +9,7 @@ customCSS: "catalyze"
 layout: "basic"
 ---
 <div class="container-color--dark-grad-blue">
-    <%= partial "partials/snippets/header", :locals => { :style => "light" } %>
+    <%= partial "partials/head/header", :locals => { :style => "light" } %>
     <section class="section-article">
         <div class="row align-center">
             <div class="columns small-12 medium-8 catalyze-content-section">
