--- a/source/contact/index.html.erb
+++ b/source/contact/index.html.erb
@@ -13,7 +13,7 @@ current_page.data.share_image = image_share_platform
 current_page.data.date = DateTime.now.strftime('%B %-d, %Y')
 %>
 <div class="container-color--blue-alt">
-    <%= partial "partials/snippets/header", :locals => { :style => "light" } %>
+    <%= partial "partials/head/header", :locals => { :style => "light" } %>
     <div class="section-article">
         <div class="row">
             <div class="columns small-12 medium-6">
