--- a/source/contact/thanks.html.erb
+++ b/source/contact/thanks.html.erb
@@ -9,7 +9,7 @@ customCSS: "contact-us"
 layout: basic
 ---
 <div class="container-color--blue-alt">
-    <%= partial "partials/snippets/header", :locals => { :style => "light" } %>
+    <%= partial "partials/head/header", :locals => { :style => "light" } %>
     <div class="section-article">
         <div class="row align-center">
             <div class="columns small-12 medium-6">
