--- a/source/contentful_templates/academy.html.erb
+++ b/source/contentful_templates/academy.html.erb
@@ -32,7 +32,7 @@ end
     #article-body h2 a {font-weight: 400;}
 </style>
 <div class="container-color--gray-light">
-    <%= partial "partials/snippets/header", :locals => { :style => "dark" } %>
+    <%= partial "partials/head/header", :locals => { :style => "dark" } %>
     <section class="section-article">
         <div class="row">
             <div class="columns small-12 medium-8 featured-post">
