--- a/source/dhsf/index.html.erb
+++ b/source/dhsf/index.html.erb
@@ -11,7 +11,7 @@ customJS: "/public/js/dhsf.js"
 ---
 
 <div class="df dhsf container-color--gray-dark-grad">
-        <%= partial "partials/snippets/header", :locals => { :style => "light" } %>
+        <%= partial "partials/head/header", :locals => { :style => "light" } %>
     <section class="section-article" id="df-top">
         <div class="row align-center">
             <div class="columns small-12 medium-10 large-8">
