--- a/source/go/subscribe.html.erb
+++ b/source/go/subscribe.html.erb
@@ -10,7 +10,7 @@ subheader: "Insights from the team behind healthcare's trusted cloud"
 layout: basic
 ---
 <div class="container-color--purple-grad-noise">
-    <%= partial "partials/snippets/header", :locals => { :style => "light" } %>
+    <%= partial "partials/head/header", :locals => { :style => "light" } %>
     <section class="section-article">
         <div class="row align-center">
             <div class="columns small-12 large-8">
