--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -14,7 +14,7 @@ collectionName: "home"
 
 .container-color--dark-grad-blue
   .container-image--center(data-interchange="[/public/img/art/waves-dots-full.svg, small]")
-    = partial "partials/snippets/header", :locals => { :style => "light" }
+    = partial "partials/head/header", :locals => { :style => "light" }
     section.section-article
       .row.align-middle
         .columns.small-12.medium-6.large-7
