--- a/source/innovation/index.html.erb
+++ b/source/innovation/index.html.erb
@@ -13,7 +13,7 @@ customCSS: "innovation"
 <div class="container-gray-5 container-image--fixed" data-interchange="[//images.ctfassets.net/189dvqdsjh46/3gflDVmPuoecamYsY6OOSI/90c46d15b8af71129e3612ac010c0574/city_blurry_bokeh_chuttersnap-179223.jpg?fit=thumb&w=800&h=800&q=40, small], [//images.ctfassets.net/189dvqdsjh46/3gflDVmPuoecamYsY6OOSI/90c46d15b8af71129e3612ac010c0574/city_blurry_bokeh_chuttersnap-179223.jpg?w=1200&q=50, large]">
     <div class="container-color--tint-70">
         <!-- <div class="container-color--dark-alt container-image--bottom" data-interchange="[/public/img/art/art-sound-bars-bg.svg, small]"> -->
-        <%= partial "partials/snippets/header", :locals => { :style => "light" } %>
+        <%= partial "partials/head/header", :locals => { :style => "light" } %>
         <section id="top" class="section-article">
             <div class="row">
                 <div class="columns small-12 medium-8 featured-post">
