--- a/source/innovation/leadership-gallery.html.erb
+++ b/source/innovation/leadership-gallery.html.erb
@@ -16,7 +16,7 @@ sorted_entries = data.site.leadershipGallery.to_a.sort_by{ |id, entry| entry['ti
 %>
 
 <div class="lg container-color--dark-alt">
-    <%= partial "partials/snippets/header", :locals => { :style => "light" } %>
+    <%= partial "partials/head/header", :locals => { :style => "light" } %>
 </div>
 
 <section id="content" class="">
