--- a/source/layouts/listing.erb
+++ b/source/layouts/listing.erb
@@ -18,7 +18,7 @@
         <a name="top"></a>
         <%# Main dark header %>
         <div class="container-color--purple-grad-noise">
-            <%= partial "partials/snippets/header", :locals => { :style => "light" } %>
+            <%= partial "partials/head/header", :locals => { :style => "light" } %>
             <section class="section-article">
                 <div class="row">
                     <div class="columns small-12 medium-8">
