--- a/source/layouts/platform.erb
+++ b/source/layouts/platform.erb
@@ -14,7 +14,7 @@
     <body class="<%= page_classes %>">
         <%#= partial "partials/snippets/alert-ribbon" %>
         <div class="container-gray-2">
-            <%= partial "partials/snippets/header", :locals => { :style => "light" } %>
+            <%= partial "partials/head/header", :locals => { :style => "light" } %>
         </div>
         <div id="platformTop" class="show-for-large" data-sticky-container>
             <nav class="sticky sticky-nav container-color--white drop text-center full-width" data-sticky data-options="marginTop:0; topAnchor:platformTop">
