--- a/source/podcast/index.html.erb
+++ b/source/podcast/index.html.erb
@@ -11,7 +11,7 @@ layout: basic
 customCSS: "podcast"
 ---
 <div class="container-color--dark-alt container-image--bottom" data-interchange="[https://images.ctfassets.net/189dvqdsjh46/5OUXo4nQ6kaqAsqE8McqIu/fcd84d36da7ad0c4b91ecb9cadb7ce87/art-sound-bars-bg.svg, small]">
-    <%= partial "partials/snippets/header", :locals => { :style => "light" } %>
+    <%= partial "partials/head/header", :locals => { :style => "light" } %>
     <section class="section-article">
         <div class="row">
             <div class="columns small-12 medium-8 featured-post">
