--- a/source/press/all.html.erb
+++ b/source/press/all.html.erb
@@ -10,7 +10,7 @@ subheader: "Press Releases"
 layout: basic
 ---
 <div class="container-color--dark-alt">
-    <%= partial "partials/snippets/header", :locals => { :style => "light" } %>
+    <%= partial "partials/head/header", :locals => { :style => "light" } %>
 </div>
 <section class="custom-sticky custom-sticky--dark show-for-large">
     <div class="row">
