--- a/source/pricing/index.html.slim
+++ b/source/pricing/index.html.slim
@@ -12,7 +12,7 @@ priority: "1.0"
 .strip-bright.strip-bright--small
 
 .container-color--dark.container-image--center(data-interchange="[/public/img/art/pricing-v2-bg.svg, medium]")
-  = partial "partials/snippets/header", :locals => { :style => "light" }
+  = partial "partials/head/header", :locals => { :style => "light" }
   section#pricing-tiers.section-article
     .row.align-center
       .columns.small-12
