--- a/source/pricing/old.html.erb
+++ b/source/pricing/old.html.erb
@@ -10,7 +10,7 @@ customCSS: "pricing"
 layout: "sparse"
 ---
 <div class="container-color--dark-alt">
-    <%= partial "partials/snippets/header", :locals => { :style => "light" } %>
+    <%= partial "partials/head/header", :locals => { :style => "light" } %>
 </div>
 <section class="section-article container-color--gray-light">
     <div class="row align-center">
