--- a/source/whitepapers/index.html.erb
+++ b/source/whitepapers/index.html.erb
@@ -8,7 +8,7 @@ share_image: "https://images.ctfassets.net/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/f
 layout: "basic"
 customCSS: "blog"
 ---
-<%= partial "partials/snippets/header", :locals => { :style => "dark" } %>
+<%= partial "partials/head/header", :locals => { :style => "dark" } %>
 <section class="section-article">
     <div class="row align-center">
         <div class="columns small-12 medium-7 text-center ">
