--- a/report.html.erb
+++ b/report.html.erb
@@ -33,7 +33,7 @@ end
 %>
 <div class="container-color--dark-alt">
     <div class="container-color--tint-20">
-        <%= partial "partials/snippets/header", :locals => { :style => "light" } %>
+        <%= partial "partials/head/header", :locals => { :style => "light" } %>
     </div>
     <section <%= header_options %>>
         <div class="row align-middle">
