--- a/source/activate/invalid.html.erb
+++ b/source/activate/invalid.html.erb
@@ -9,7 +9,7 @@ layout: basic
 hide_from_sitemap: true
 ---
 <div class="container-color--dark-alt">
-    <%= partial "partials/snippets/header", :locals => { :style => "light" } %>
+    <%= partial "partials/head/header", :locals => { :style => "light" } %>
 </div>
 <section class="section-article">
     <div class="row align-center">
