--- a/source/blog/archives.html.erb
+++ b/source/blog/archives.html.erb
@@ -9,7 +9,7 @@ layout: basic
 customCSS: "blog"
 ---
 <div class="container-color--dark-alt">
-    <%= partial "partials/snippets/header", :locals => { :style => "light" } %>
+    <%= partial "partials/head/header", :locals => { :style => "light" } %>
     <section class="custom-sticky custom-sticky--dark show-for-large">
         <div class="row">
             <div class="columns small-12 medium-12">
