--- a/source/contentful_templates/_guide.html.erb
+++ b/source/contentful_templates/_guide.html.erb
@@ -27,7 +27,7 @@ end
 %>
 <div class="container-color--dark-alt">
     <div class="container-color--tint-20">
-        <%= partial "partials/snippets/header", :locals => { :style => "light" } %>
+        <%= partial "partials/head/header", :locals => { :style => "light" } %>
     </div>
     <section class="section-article">
         <div class="row align-middle">
