--- a/source/contentful_templates/customer.html.erb
+++ b/source/contentful_templates/customer.html.erb
@@ -30,7 +30,7 @@ else
     current_page.data.date = "Januray 1, 2017"
 end
 %>
-<%= partial "partials/snippets/header", :locals => { :style => "dark" } %>
+<%= partial "partials/head/header", :locals => { :style => "dark" } %>
 
 <section class="section-article">
     <article class="content-static">
