--- a/source/contentful_templates/report.html.erb
+++ b/source/contentful_templates/report.html.erb
@@ -41,7 +41,7 @@ end
 %>
 <div class="container-color--dark-alt">
     <div class="container-color--tint-20">
-        <%= partial "partials/snippets/header", :locals => { :style => "light" } %>
+        <%= partial "partials/head/header", :locals => { :style => "light" } %>
     </div>
 
     <section class="section-article pad-no-bottom">
