--- a/source/hipaa-compliant-web-hosting.html.erb
+++ b/source/hipaa-compliant-web-hosting.html.erb
@@ -9,7 +9,7 @@ share_image: "https://images.ctfassets.net/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/f
 layout: basic
 ---
 <div class="container-color--blue-alt">
-    <%= partial "partials/snippets/header", :locals => { :style => "light" } %>
+    <%= partial "partials/head/header", :locals => { :style => "light" } %>
     <div class="section-article">
         <div class="row align-center">
             <div class="section--header-dark-group text-center">
