--- a/source/leadership/index.html.erb
+++ b/source/leadership/index.html.erb
@@ -17,7 +17,7 @@ sorted_daticans  = data.site.person.to_a.sort_by{ |id, person| person['slug'] }
 %>
 
 <div class="container-color--dark-alt">
-    <%= partial "partials/snippets/header", :locals => { :style => "light" } %>
+    <%= partial "partials/head/header", :locals => { :style => "light" } %>
 </div>
 <section class="custom-sticky custom-sticky--dark show-for-large">
     <div class="row">
