--- a/source/pricing/enterprise.html.erb
+++ b/source/pricing/enterprise.html.erb
@@ -10,7 +10,7 @@ customJS: "/public/js/form.js"
 layout: basic
 ---
 <div class="container-color--blue-alt">
-    <%= partial "partials/snippets/header", :locals => { :style => "light" } %>
+    <%= partial "partials/head/header", :locals => { :style => "light" } %>
     <div class="section-article">
         <div class="row">
             <div class="columns small-12 medium-6">
