Adding setence about mirth

--- a/source/pricing/index.html.slim
+++ b/source/pricing/index.html.slim
@@ -33,7 +33,7 @@ priority: "1.0"
               p.small All customers receive basic ticket support with their Platform subscription. We also offer premium support to enterprise customers.
 
               p.small <strong>Add-ons</strong>
-              p.small We're dedicated to giving you the flexibility you need, while still providing the highest level of compliance available on the market. With add-ons, Datica can make any cloud native service compliant.
+              p.small We're dedicated to giving you the flexibility you need, while still providing the highest level of compliance available on the market. With add-ons, Datica can make any cloud native service compliant. Additionally, our industry-leading approach to EHR integration includes an HA Mirth Connect Environment.
 
               p.small <strong>Professional Services</strong>
               p.small Rely on Datica experts for compliance, auditing, and technical developer operations needs. Datica offers a wide range of professional services.
