uncapping cards in row's height, weird whitespace at some viewports

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -75,7 +75,7 @@ section.section-article
 - sorted_reports = data.site.reports.to_a.sort_by{ |id, report| report['pub_date'] }.reverse!
 section.container-gray-10.section-article
   h3.headline-3.group.text-center <strong>Recently</strong> at Datica
-  .row.full-width.row--card-grid.align-center.small-up-1.medium-up-2.large-up-3.xlarge-up-4
+  .row.full-width.align-center.small-up-1.medium-up-2.large-up-3.xlarge-up-4
     / .column
     /   .card
     /     .card-section
