--- a/source/assets/scss/modules/cards.scss
+++ b/source/assets/scss/modules/cards.scss
@@ -26,7 +26,7 @@
         margin-bottom: 0;
     }
     .button-inline { // sheesh there are outliers for buttons in cards sometimes :rolleyes:
-        display: inline;
+        display: inline-block;
         width: auto;
         margin-bottom: 0;
     }
