--- a/source/pricing/index.html.slim
+++ b/source/pricing/index.html.slim
@@ -17,23 +17,36 @@ priority: "1.0"
       .row.align-center.group
         .columns.small-12.large-9.text-center
           h1.headline-2 Plans & Platform Options
-          p.lead Infrastructure at cost, with compliance built in. Choose a package to fit your needs.
+          p.lead Infrastructure at cost, with compliance built in. Our Datica Experts will help you find the features and services to fit your needs.
       .row.align-center
         .columns.small-12.medium-10.large-7
-          .card.drop
+          .card.pad.drop
             .card-section
-              h4.headline-5 Datica Platform Subscription
+              h4.headline-5 
+                = inline_svg("small/icon-ui-checkmark", class: "icon-inline icon-left svg-color--green")
+                | Datica Platform Subscription
               p A Datica Platform subscription is comprised of a <em>Licensing</em> and a <em>Continuous Compliance Management</em> Fee.
-              h4.headline-5 Deployment Models
+              h4.headline-5 
+                = inline_svg("small/icon-ui-checkmark", class: "icon-inline icon-left svg-color--green") 
+                | Deployment Models
               p We can deploy a Kubernetes cluster into your cloud account, or Datica's cloud. We give you the flexibility to decide how much, or how little you want to manage.
-              h4.headline-5 Support
+              h4.headline-5 
+                = inline_svg("small/icon-ui-checkmark", class: "icon-inline icon-left svg-color--green") 
+                | Support
               p All customers receive basic ticket support with their Platform subscription. We also offer premium support to enterprise customers.
-              h4.headline-5 Add-ons
+              h4.headline-5 
+                = inline_svg("small/icon-plus-circle", class: "icon-inline icon-left svg-color--blue")
+                / span.text--blue + 
+                | Add-ons
               p We're dedicated to giving you the flexibility you need, while still providing the highest level of compliance available on the market. With add-ons, Datica can make any cloud native service compliant. Additionally, our industry-leading approach to EHR integration includes an HA Mirth Connect Environment.
-              h4.headline-5 Professional Services
-              p Rely on Datica experts for compliance, auditing, and technical developer operations needs. Datica offers a wide range of professional services.
+              h4.headline-5 
+                = inline_svg("small/icon-plus-circle", class: "icon-inline icon-left svg-color--blue")
+                / span.text--blue + 
+                | Professional Services
+              p Rely on Datica experts for compliance, auditing, and technical developer operations needs. Datica offers <a href="/services" title="Professional Services">a wide range of professional services</a>.
             #pricing-cta.text-center.card-divider
-              = partial "partials/snippets/button", :locals => { :label => "Schedule a Demo", :url => "/demo", :button_classes => "button full-width", :icon => "icon-event-check", :icon_color => "white", :icon_align => "left", :data_track_group => "platform", :item_id => "tier-standard" }
+              p.lead Choose a time to see a Platform demo, and our Datica Experts will help you get the features and support you need.
+              = partial "partials/snippets/button", :locals => { :label => "Schedule a Demo", :url => "/demo", :button_classes => "button large button-inline", :icon => "icon-event-check", :icon_color => "white", :icon_align => "left", :data_track_group => "platform", :item_id => "pricing-demo" }
 
 / .container-color--gray-light
 /   .container-image--fixed(data-interchange="[https://images.ctfassets.net/189dvqdsjh46/31Xr7kD9GUu8gYo6IOISac/b72aedc4ed520f1ad4ae78a24109838f/bg-weave-light.png?w=2200&h=1000&fm=jpg, large]")
