Content structure changes to Platform/index. - Re-ordered a few of the sections to alternate proof points vs. persuasive points - Moved the old legacy pricing content to an invisible partial in /platform folder - Uploaded AWS reinvent MLH video to Wistia for better perf, visual control and analytics - Added "view pricing" button to top container - Found a nice button group ZF pattern, moving to those for n-up button groups

--- a/source/assets/scss/modules/cards.scss
+++ b/source/assets/scss/modules/cards.scss
@@ -30,7 +30,7 @@
         width: auto;
         margin-bottom: 0;
     }
-    .button{
+    .button{ // ** replace this with button-group ZF modules, solves the problem https://foundation.zurb.com/sites/docs/button-group.html
         &.button-group { // use when you have n-up buttons in a horizontal row (say, via .float-[dir])
             &:first-child {
                 margin-bottom: 1rem; // if there's a group, then more than 1 button, so first one stacks. dunno
