--- a/source/partials/section-promos/_aws-mlh-video.erb
+++ b/source/partials/section-promos/_aws-mlh-video.erb
@@ -17,10 +17,10 @@ end
     <h3 class="headline-3 group text-center">Build <strong>Breakthrough</strong> Compliant Apps</h3>
     <div class="row">
         <div class="columns small-12 medium-6">
-            <a href="/blog/how-a-major-health-system-got-onto-aws-recapping-the-featured-session-today" title="Watch the session at AWS Re:Invent 2018">
-                <img class="group--sm" alt="How Methodist Le Bonheur Healthcare's Focus on Standardizing Compliant Ops led to Breakthrough Apps" data-interchange="[https://images.ctfassets.net/189dvqdsjh46/h5Hb4o4fGS8U2ugmAkIIO/2a116a69e81b426e024d1ea642f8073f/aws-mlh-video-poster.jpg?w=700&q=45, small], [https://images.ctfassets.net/189dvqdsjh46/h5Hb4o4fGS8U2ugmAkIIO/2a116a69e81b426e024d1ea642f8073f/aws-mlh-video-poster.jpg?w=1000, large]" />
-            </a>
+            <script src="https://fast.wistia.com/embed/medias/djywh7kkgd.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_djywh7kkgd popover=true popoverAnimateThumbnail=true videoFoam=true" style="display:inline-block;height:100%;width:100%">&nbsp;</span></div></div>
+            
             <%#= 
+            <a href="/blog/how-a-major-health-system-got-onto-aws-recapping-the-featured-session-today" title="Watch the session at AWS Re:Invent 2018"></a>
             partial "partials/snippets/button", 
                 :locals => {
                     :label => "Read how MLH got on to AWS", 
