--- a/source/platform/index.html.slim
+++ b/source/platform/index.html.slim
@@ -20,9 +20,9 @@ priority: "0.9"
       .columns.small-12.medium-large-6
         h1.headline-2 End-to-end compliance on AWS and Azure is possible.
         p.small The Datica Platform fills the compliance gaps on top of public clouds like AWS and Azure by combining the best technology available and mapping it to frameworks like HIPAA, HITRUST, GDPR, and GxP. Customers use Kubernetes-enabled orchestration to deploy containerized workloads to the Platform that <strong>are guaranteed to be continuously compliant</strong>.
-        .button-group.stack-for-small
+        .menu.button-cluster
           = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted", :item_id => "cta_top_pricing" }
-          = partial "partials/snippets/button", :locals => { :label => "Explore Platform Capabilities", :title => "Explore the capabilities of the Datica Platform", :url => "/platform/technology", :button_classes => "button", :icon => "icon-chevron-right", :icon_color => "white", :item_id => "top-tech" }
+          = partial "partials/snippets/button", :locals => { :label => "Explore The Platform", :title => "Explore the capabilities of the Datica Platform", :url => "/platform/technology", :button_classes => "button", :icon => "icon-chevron-right", :icon_color => "white", :item_id => "top-tech" }
     img.position-bottom-rt(src="/public/img/art/platform-iso-illustration.svg" alt="Datica Platform illustration")
 
 section#platform-customers.section-article.container-gray-12
@@ -53,20 +53,15 @@ section#tech-hcms.section-article.container-color--dark-grad-blue
     .columns.small-12
       .row.align-center
         .columns.small-12.text-center.group
-          h2.headline-4.spaced-out How Customers Use the Datica Platform
-      .row.align-center
-      .columns.small-12.text-center.group
-          h2.headline-3.nomargin Building On The Platform
-      .row.align-center.align-bottom
+          h3.headline-5.spaced-out How Customers Use the Datica Platform
+          h2.headline-2 Building On The Platform
+      .row.align-center.small-up-1.medium-large-up-3
         - data.views.platform.platform_use.each do | step |
-          .columns.small-12.medium-4
+          .column.group
             img.pad.build-height alt="#{step.title}" src="#{step.image}?w=500"
-      .row.align-center.group
-        - data.views.platform.platform_use.each do | step |
-          .columns.small-12.medium-4
             h4.headline-5= step.title
             p= step.desc
-            = partial "partials/snippets/button", :locals => { :label => step.button.label, :title => step.button.label, :url => step.button.url, :button_classes => "button small secondary", :icon => "icon-chevron-right", :icon_color => "white", :icon_align => "right" }
+            = partial "partials/snippets/button", :locals => { :label => step.button.label, :title => step.button.label, :url => step.button.url, :button_classes => "button small hollow-inverted", :icon => "icon-chevron-right", :icon_color => "white", :icon_align => "right" }
 
 section.section-article.container-gray-10#platform-shared-responsibility
   .row.group.align-center
@@ -80,8 +75,8 @@ section.section-article.container-gray-10#platform-shared-responsibility
       .columns.small-12.medium-4
         = Kramdown::Document.new(block).to_html
 
-.container-image--fixed.container-color--dark
-  .container-image--center(data-interchange="[https://images.ctfassets.net/189dvqdsjh46/qDYJLe7zyKsaU6OoGCSWg/55fed65d63a33a39b690697200a0d5b2/bg-rects-blue-dark.png?w=2400&h=1200&fit=thumb&fm=jpg&q=80, large]")
+.container-image--fixed.container-gray-2
+  .container-image--center(data-interchange="[https://images.ctfassets.net/189dvqdsjh46/qDYJLe7zyKsaU6OoGCSWg/55fed65d63a33a39b690697200a0d5b2/bg-rects-blue-dark.png?w=2400&h=1200&fit=thumb&fm=jpg&q=80, medium]")
     section#platform-aws.section-article
       .row.align-middle.align-center
         .columns.small-12.medium-8
@@ -89,16 +84,16 @@ section.section-article.container-gray-10#platform-shared-responsibility
             | You wouldn't build payment processing infrastructure to charge credit cards.
             br/
             | You'd use Stripe.
-      .row.align-middle.align-center
-        .columns.small-12.medium-8
-          .row.align-center
-            .columns.small-12.medium-6
-              p.lead.group <strong>So why waste money and take on unnecessary risk building your own compliance layer?</strong>
-              p Datica is an <strong>Amazon Web Services Advanced Tier Technology Partner</strong> with a <strong>Healthcare Competency</strong> focus.
-            .columns.small-12.medium-6
-              img.logo-size--xlarge.group alt=("apn tech") src="https://d1.awsstatic.com/partner-network/APN-Advanced-Technology-Badge.d737de9106285590a46875b8805247f22f8433ba.png"
-              .group
-                = partial "partials/snippets/button",  :locals => { :label => "Explore Datica on AWS", :title => "Explore Datica on AWS", :url => "/platform/aws", :button_classes => "button button--light group", :icon => "icon-chevron-right", :icon_color => "black", :icon_align => "right", :item_id => "aws" }
+
+      .row.align-center.align-middle
+        .columns.small-12.medium-6.medium-large-4
+          img.hide-for-medium.float-right.group width="150" alt=("apn tech") src="https://d1.awsstatic.com/partner-network/APN-Advanced-Technology-Badge.d737de9106285590a46875b8805247f22f8433ba.png"
+          p.lead.group <strong>So why waste money and take on unnecessary risk building your own compliance layer?</strong>
+          p Datica is an <strong>Amazon Web Services Advanced Tier Technology Partner</strong> with a <strong>Healthcare Competency</strong> focus.
+        .columns.small-12.medium-4.medium-large-4
+          img.logo-size--xlarge.group.show-for-medium alt=("apn tech") src="https://d1.awsstatic.com/partner-network/APN-Advanced-Technology-Badge.d737de9106285590a46875b8805247f22f8433ba.png"
+          .group
+            = partial "partials/snippets/button",  :locals => { :label => "Explore Datica on AWS", :title => "Explore Datica on AWS", :url => "/platform/aws", :button_classes => "button button--light group", :icon => "icon-chevron-right", :icon_color => "black", :icon_align => "right", :item_id => "aws" }
 
 section.section-article.container-gray-11.container-image--fixed(data-interchange="[https://images.ctfassets.net/189dvqdsjh46/31Xr7kD9GUu8gYo6IOISac/b72aedc4ed520f1ad4ae78a24109838f/bg-weave-light.png?w=2200&h=1000&fm=jpg, medium]")
   = partial "partials/section-promos/hcms-screenshot"
