--- a/source/careers.html.erb
+++ b/source/careers.html.erb
@@ -41,10 +41,13 @@ layout: "company"
             <img class="group" src="https://images.ctfassets.net/189dvqdsjh46/1317Z506pieQaAIqmuMKK6/eec0c0a27e665c79a3a4f0be30db6b72/company-3.jpg?fit=crop&w=800&h=360" alt="Madison, WI" />
             <img class="group" src="https://images.ctfassets.net/189dvqdsjh46/7ugfd60MRa2o4uqy4CiGyS/5b2b8be926c820195ecdd74c424e569a/company-4.jpg?w=800" alt="Datica Company Photo" />
             <img class="group" src="https://images.ctfassets.net/189dvqdsjh46/4KnuEp6gDe2MwOIqIKuKUk/66b11ef15d7a8bcc0dd174a6a5279043/datica_team_-_hall_chat_2_P1040676.jpg" alt="Datica Company Photo" />
-            <p class="text-center">
-                <iframe frameborder='0' height='225px' src='https://app.tinypulse.com/happiness_badges/9f32d88ccff431ab5f9d67ce35cf7405' width='235px'>
-                </iframe>
-            </p>
+            <%            
+                # <p class="text-center">
+                #     <iframe frameborder='0' height='225px' src='https://app.tinypulse.com/happiness_badges/9f32d88ccff431ab5f9d67ce35cf7405' width='235px'>
+                #     </iframe>
+                # </p>
+            %>
+
         </div>
         <div class="columns small-12 medium-7">
             <div class="callout drop callout--large">
