--- a/source/assets/scss/modules/forms.scss
+++ b/source/assets/scss/modules/forms.scss
@@ -76,81 +76,81 @@ input[type="number"]{
 select{border: rem-calc(1px) solid $color_border;}
 
 // nav search field in top bar 😢
-// .input-nav {
-//     @include breakpoint(large up) {
-//         display: inline-block;
-//     }
-//     position: relative;
-//     input[type="search"], input[type="text"] {
-//         width: 100%;
-//         @include breakpoint(large up) {
-//             width: rem-calc(98);
-//         }
-//         margin: 0 1rem 0 0;
-//         padding-left: 1.7rem; // room for icon
-//         @include easing($timing-default);
-//         &:focus {
-//             @include breakpoint(large) {
-//                 width: rem-calc(170);
-//             }
-//             @include breakpoint(xlarge up) {
-//                 width: rem-calc(300);
-//             }
-//         }
-//     }
-//     &--black {
-//         input {
-//             background-color: white(0);
-//             border: 1px solid black(0);
-//             @include input-placeholder {
-//                 color: black(0.7);
-//             }
-//             color: black(0.7);
-//             &:focus{
-//                 border: 1px solid black(1);
-//                 background-color: lighten($color_yellow-glow, 10%);
-//                 @include input-placeholder {
-//                     color: black(0.7);
-//                 }
-//                 color: $black;
-//             }
-//         }
-//     }
-//     &--white {
-//         input {
-//             background-color: black(0);
-//             border: 1px solid white(0);
-//             @include input-placeholder {
-//                 color: white(1);
-//             }
-//             color: white(1);
-//             &:focus {
-//                 border: 1px solid white(1);
-//                 background-color: $black;
-//                 @include input-placeholder {
-//                     color: white(0.8);
-//                 }
-//                 color: $white;
-//             }
-//         }
-//     }
-//     &--icon {
-//         // color: white(0.5);
-//         margin-left: 0.5rem;
-//         position: absolute;
-//         top: 0.4rem;
-//         z-index: 1;
-//     }
-//     &--white &--icon {
-//         color: white(0.8);
-//     }
-//     &--black &--icon {
-//         color: black(0.6);
-//     }
-// }
+.input-nav {
+    @include breakpoint(large up) {
+        display: inline-block;
+    }
+    position: relative;
+    & > input[type="search"], & > input[type="text"] {
+        width: 100%;
+        @include breakpoint(large up) {
+            width: rem-calc(98);
+        }
+        margin: 0 1rem 0 0;
+        padding-left: 1.7rem; // room for icon
+        @include easing($timing-default);
+        &:focus {
+            @include breakpoint(large) {
+                width: rem-calc(170);
+            }
+            @include breakpoint(xlarge up) {
+                width: rem-calc(300);
+            }
+        }
+    }
+    &--black {
+        input {
+            background-color: white(0);
+            border: 1px solid black(0);
+            @include input-placeholder {
+                color: black(0.7);
+            }
+            color: black(0.7);
+            &:focus{
+                border: 1px solid black(1);
+                background-color: lighten($color_yellow-glow, 10%);
+                @include input-placeholder {
+                    color: black(0.7);
+                }
+                color: $black;
+            }
+        }
+    }
+    &--white {
+        input {
+            background-color: black(0);
+            border: 1px solid white(0);
+            @include input-placeholder {
+                color: white(1);
+            }
+            color: white(1);
+            &:focus {
+                border: 1px solid white(1);
+                background-color: $black;
+                @include input-placeholder {
+                    color: white(0.8);
+                }
+                color: $white;
+            }
+        }
+    }
+    &--icon {
+        // color: white(0.5);
+        margin-left: 0.5rem;
+        position: absolute;
+        top: 0.4rem;
+        z-index: 1;
+    }
+    &--white &--icon {
+        color: white(0.8);
+    }
+    &--black &--icon {
+        color: black(0.6);
+    }
+}
 .filter-search { // used for long list filtering (academy, et. al.)
     input[type="search"], input[type="text"] {
-        $input-width: 300;
+        $input-width: 400;
         width: 100%;
         padding-bottom: 0;
         padding-top:    0;
